# fastapi_initializr

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  commits_check_config.yaml  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yml
src/: main.py
src/application/services/: project_service.py
src/domain/commands/: base.py  registry.py
src/domain/entities/: command_result.py  project.py
src/domain/repositories/: template_repository.py
src/domain/services/: project_generator.py
src/infrastructure/api/: __init__.py  generator.py  health.py
src/infrastructure/commands/: basic_template.py  core_files.py  dependency.py  docker.py  documentation.py  minimal_template.py  utils.py
src/infrastructure/config/: settings.py
src/infrastructure/enumerators/: command_priority.py  dependency_manager.py  template_type.py
src/infrastructure/exceptions/: command_execution.py
src/infrastructure/generators/: jinja_project_generator.py
src/infrastructure/middleware/: request_logging_middleware.py
src/infrastructure/middleware/logging/: constants.py  request_logger.py  request_logging_middleware.py  utils.py
src/infrastructure/repositories/: jinja_template_repository.py
src/infrastructure/schemas/: health.py  project.py
src/infrastructure/templates/basic/: main.py.jinja
src/infrastructure/templates/dependency/: pyproject.toml.jinja  requirements.txt.jinja
src/infrastructure/templates/docker/: Dockerfile.jinja  Dockerfile.poetry.jinja  docker-compose.yml.jinja
src/infrastructure/templates/minimal/: README.md.jinja  main.py.jinja
(+9 files in other folders)
