[tool.poetry]
name = "fastapi-initializr"
version = "0.1.0"
description = "A FastAPI project generator"
authors = ["Pedro Serrano Faria <pedroserrano2@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "tests"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.9"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
